# docs/swagger.json
@@ -1,10 +1,23 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "Hacktiv8 Scalable Web Service with Golang Final Project",
+        "title": "MyGram API",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "Swagger API Team",
+            "url": "http://swagger.io",
+            "email": "fajaramaulana.dev@gmail.com"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0"
     },
+    "host": "localhost:8081",
     "paths": {
-        "/comment": {
+        "/comments": {
             "get": {
                 "description": "Get All Comment By User Id",
                 "consumes": [
@@ -20,7 +33,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Bearer Token",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -62,7 +76,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Bearer Token",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -105,7 +120,7 @@
                 }
             }
         },
-        "/comment/{commentid}": {
+        "/comments/{commentid}": {
             "put": {
                 "description": "Update Comment",
                 "consumes": [
@@ -121,7 +136,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Bearer Token",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -185,7 +201,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Bearer Token",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -236,7 +253,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Bearer token",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -278,7 +296,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Bearer token",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -337,7 +356,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Bearer token",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -401,7 +421,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Bearer token",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -452,7 +473,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Bearer Token",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -500,7 +522,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Bearer Token",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -553,7 +576,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Bearer Token",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -623,7 +647,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Bearer Token",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -664,7 +689,52 @@
                 }
             }
         },
-        "/user/login": {
+        "/users": {
+            "delete": {
+                "description": "Delete User",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Delete User",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/view.ResponseDeleteUser"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/view.ResponseError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/view.ResponseError"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/login": {
             "post": {
                 "description": "Login User",
                 "consumes": [
@@ -710,7 +780,7 @@
                 }
             }
         },
-        "/user/register": {
+        "/users/register": {
             "post": {
                 "description": "Register User",
                 "consumes": [
@@ -756,7 +826,7 @@
                 }
             }
         },
-        "/user/{userid}": {
+        "/users/{userid}": {
             "put": {
                 "description": "Update User",
                 "consumes": [
@@ -806,56 +876,6 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/view.Response"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/view.ResponseError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/view.ResponseError"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Delete User",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User"
-                ],
-                "summary": "Delete User",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "userid",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "default": "Bearer \u003cAdd access token here\u003e",
-                        "description": "Insert your access token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/view.ResponseDeleteUser"
                         }
                     },
                     "401": {
